MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/signature__FieldUpdate__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Updates to records IF the signature is performed</description>
    <label>ß Field Updates</label>
</CustomObject>