MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__DefaultValueField__c.field-meta.xml
<CustomField>
    <fullName>signature__DefaultValueField__c</fullName>
    <description>API Name for the field on the Signature Form to show this default value</description>
    <inlineHelpText>API Name for the field on the Signature Form to show this default value</inlineHelpText>
    <label>Default Value Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>