MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__Field__c.field-meta.xml
<CustomField>
    <fullName>signature__Field__c</fullName>
    <description>API Name of the field to be updated</description>
    <inlineHelpText>API Name of the field to be updated</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>