MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__ForceOverwrite__c.field-meta.xml
<CustomField>
    <fullName>signature__ForceOverwrite__c</fullName>
    <description>Yes to Overwrite even if blank</description>
    <inlineHelpText>Yes to Overwrite even if blank</inlineHelpText>
    <label>Force Overwrite</label>
    <length>10</length>
    <type>Text</type>
</CustomField>