MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__RecordID__c.field-meta.xml
<CustomField>
    <fullName>signature__RecordID__c</fullName>
    <description>Record to be updated</description>
    <inlineHelpText>Record to be updated</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>