MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__Status__c.field-meta.xml
<CustomField>
    <fullName>signature__Status__c</fullName>
    <description>Ready or Completed</description>
    <inlineHelpText>Ready or Completed</inlineHelpText>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>