MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__UpdateType__c.field-meta.xml
<CustomField>
    <fullName>signature__UpdateType__c</fullName>
    <description>Text, Numeric, Boolean, Date, DateTime</description>
    <inlineHelpText>Text, Numeric, Boolean, Date, DateTime</inlineHelpText>
    <label>Update Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>