MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__UserID__c.field-meta.xml
<CustomField>
    <fullName>signature__UserID__c</fullName>
    <description>Salesforce User initiating the Signature</description>
    <inlineHelpText>Salesforce User initiating the Signature</inlineHelpText>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>