MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__Value__c.field-meta.xml
<CustomField>
    <fullName>signature__Value__c</fullName>
    <description>Text value to be given to the field</description>
    <inlineHelpText>Text value to be given to the field</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>