MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__ValueBoolean__c.field-meta.xml
<CustomField>
    <fullName>signature__ValueBoolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox value to be given to the field</description>
    <inlineHelpText>Checkbox value to be given to the field</inlineHelpText>
    <label>Value (Boolean)</label>
    <type>Checkbox</type>
</CustomField>