MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__ValueDate__c.field-meta.xml
<CustomField>
    <fullName>signature__ValueDate__c</fullName>
    <description>Date value to be given to the field</description>
    <inlineHelpText>Date value to be given to the field</inlineHelpText>
    <label>Value (Date)</label>
    <type>Date</type>
</CustomField>