MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__ValueDateTime__c.field-meta.xml
<CustomField>
    <fullName>signature__ValueDateTime__c</fullName>
    <description>Date/Time value to be given to the field</description>
    <inlineHelpText>Date/Time value to be given to the field</inlineHelpText>
    <label>Value (DateTime)</label>
    <type>DateTime</type>
</CustomField>