MyDemoOrg/force-app/main/default/objects/signature__FieldUpdate__c/fields/signature__ValueNumeric__c.field-meta.xml
<CustomField>
    <fullName>signature__ValueNumeric__c</fullName>
    <description>Numeric value to be given to the field</description>
    <inlineHelpText>Numeric value to be given to the field</inlineHelpText>
    <label>Value (Numeric)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>